@@ -6,6 +6,9 @@
    - markus@cvs.openbsd.org 2001/03/26 23:12:42
      [authfile.c]
      KNF
+   - markus@cvs.openbsd.org 2001/03/26 23:23:24
+     [rsa.c rsa.h ssh-agent.c ssh-keygen.c]
+     try to read private f-secure ssh v2 rsa keys.
 
 20010328
  - (djm) Reorder tests and library inclusion for Krb4/AFS to try to 
@@ -4744,4 +4747,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1027 2001/03/29 00:28:37 mouring Exp $
+$Id: ChangeLog,v 1.1028 2001/03/29 00:29:54 mouring Exp $
